# prog3_backend

./: .env.example  .gitignore  API_DOCS.md  ARCHITECTURE_SUMMARY.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
app/: README.md  config.py  models.py  schemas.py
app/controllers/: __init__.py  health_controller.py  user_controller.py
app/models/: __init__.py  user.py
app/repositories/: base_repository.py  user_repository.py
app/routers/: health.py  users.py
app/schemas/: user.py
app/services/: base_service.py  user_service.py
tests/: test_validation.py
